force-app/main/default/objects/Case/fields/Urgent_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Request_Status__c</fullName>
    <inlineHelpText>Use Review client team if you opened a recruitment review EM or need more info from the client team</inlineHelpText>
    <label>Urgent Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Review Client Team</fullName>
            </value>
            <value>
                <fullName>Unable to Resolve</fullName>
            </value>
            <value>
                <fullName>Recruitment Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>