force-app/main/default/objects/Case/fields/User_Manager_Check__c.field-meta.xml
<CustomField>
    <fullName>User_Manager_Check__c</fullName>
    <formula>Owner:User.ManagerId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Manager Check</label>
    <type>Checkbox</type>
</CustomField>