force-app/main/default/objects/Case/fields/What_can_we_help_you_with__c.field-meta.xml
<CustomField>
    <fullName>What_can_we_help_you_with__c</fullName>
    <description>Website offline support widget - capturing details around case submission.</description>
    <label>What can we help you with?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>