force-app/main/default/objects/Case/recordTypes/Bid_Process_Details.recordType-meta.xml
<RecordType>
    <fullName>Bid_Process_Details</fullName>
    <active>true</active>
    <businessProcess>Bid Process</businessProcess>
    <description>Use to document bid information and communication</description>
    <label>Bid Process Details</label>
</RecordType>