force-app/main/default/objects/Case/recordTypes/BPI_Requests.recordType-meta.xml
<RecordType>
    <fullName>BPI_Requests</fullName>
    <active>true</active>
    <businessProcess>BPI Requests Support Process</businessProcess>
    <label>BPI Requests</label>
</RecordType>