force-app/main/default/objects/Case/recordTypes/Client_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>Client_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Client Inquiries</businessProcess>
    <description>Use to document general client communication</description>
    <label>Client Inquiry</label>
</RecordType>