force-app/main/default/objects/Case/recordTypes/Client_Pricing_Request.recordType-meta.xml
<RecordType>
    <fullName>Client_Pricing_Request</fullName>
    <active>true</active>
    <businessProcess>Client Pricing Request</businessProcess>
    <description>To be used by the Sales, Account Director, and BPI teams only for new and existing client pricing requests.</description>
    <label>Client Pricing Request</label>
</RecordType>