force-app/main/default/objects/Case/recordTypes/Consumer_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>Consumer_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Consumer Inquiries</businessProcess>
    <description>Use to document consumer communication</description>
    <label>Consumer Inquiry</label>
</RecordType>