force-app/main/default/objects/Case/recordTypes/Contractor_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>Contractor_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Contractor Inquiries</businessProcess>
    <description>Use for contractor inquiries not bid related</description>
    <label>Contractor Inquiry</label>
</RecordType>