force-app/main/default/objects/Case/recordTypes/Finance_Client_and_Consumer_Claim.recordType-meta.xml
<RecordType>
    <fullName>Finance_Client_and_Consumer_Claim</fullName>
    <active>true</active>
    <businessProcess>Finance%3A Client Or Consumer Claims Support Process</businessProcess>
    <description>For the creation of cases relating to Client or Consumer Claims</description>
    <label>Finance: Client and Consumer Claim</label>
</RecordType>