force-app/main/default/objects/Case/recordTypes/Finance_Failed_Payment.recordType-meta.xml
<RecordType>
    <fullName>Finance_Failed_Payment</fullName>
    <active>true</active>
    <businessProcess>Finance%3A Consumer Failed Payment Support Process</businessProcess>
    <description>For the creation of cases relating to Consumer Failed Payments</description>
    <label>Finance: Failed Payment</label>
</RecordType>