force-app/main/default/objects/Case/recordTypes/PastDueCase.recordType-meta.xml
<RecordType>
    <fullName>PastDueCase</fullName>
    <active>true</active>
    <businessProcess>Past Due Case</businessProcess>
    <description>Past Due Case</description>
    <label>Past Due Case</label>
</RecordType>