force-app/main/default/objects/Case/recordTypes/QC_Case.recordType-meta.xml
<RecordType>
    <fullName>QC_Case</fullName>
    <active>true</active>
    <businessProcess>QC Cases</businessProcess>
    <label>QC Case</label>
</RecordType>