force-app/main/default/objects/Case/recordTypes/Tracing_Case.recordType-meta.xml
<RecordType>
    <fullName>Tracing_Case</fullName>
    <active>true</active>
    <businessProcess>Tracing Cases</businessProcess>
    <label>Tracing Case</label>
</RecordType>