force-app/main/default/objects/Case/recordTypes/Turns.recordType-meta.xml
<RecordType>
    <fullName>Turns</fullName>
    <active>true</active>
    <businessProcess>Turns</businessProcess>
    <description>Use for logging and tracking turns</description>
    <label>Turns</label>
</RecordType>