force-app/main/default/objects/Case/recordTypes/Urgent_Client_Request.recordType-meta.xml
<RecordType>
    <fullName>Urgent_Client_Request</fullName>
    <active>true</active>
    <businessProcess>Urgent Client Request Process</businessProcess>
    <description>Used for Escalated Cases with the Elite Team</description>
    <label>Urgent Client Request</label>
</RecordType>