force-app/main/default/objects/Case/recordTypes/Web_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>Web_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Web Inquiry Support Process</businessProcess>
    <label>Web Inquiry</label>
</RecordType>