force-app/main/default/objects/Case/validationRules/Next_Call_Date_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Call_Date_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISBLANK( Next_Call_Date__c ) , 
 RecordType.DeveloperName  = &quot;Client_Pricing_Request&quot;,
NOT(CONTAINS($User.Username,&apos;boomi@taskeasy.com&apos;)))</errorConditionFormula>
    <errorMessage>A next call date must be set before saving Client Pricing Request.</errorMessage>
</ValidationRule>