force-app/main/default/objects/Case/validationRules/Reason_required_to_close_turns_case.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_required_to_close_turns_case</fullName>
    <active>true</active>
    <description>Creates requirement for the resolution reason as well as the case reason field to be filled in before a case can be saved as a closed turns status.</description>
    <errorConditionFormula>AND(
ISPICKVAL( Turns_Status__c , &apos;Closed&apos;),
OR(
ISBLANK(TEXT( Case_Resolution_Reason__c)),
ISBLANK(TEXT( Reason))
)
)</errorConditionFormula>
    <errorDisplayField>Turns_Status__c</errorDisplayField>
    <errorMessage>The case reason and case resolution reason must be selected before you can save any turns case as closed.</errorMessage>
</ValidationRule>