force-app/main/default/objects/Case/validationRules/Reasons_Required_to_Close_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Reasons_Required_to_Close_Case</fullName>
    <active>true</active>
    <description>Creates requirement for the resolution reason as well as the case reason field to be filled in before a case can be saved as a closed status.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &apos;Closed&apos;),
OR(
ISBLANK(TEXT( Case_Resolution_Reason__c)),
ISBLANK(TEXT( Reason))
))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>The case reason and case resolution reason must be selected before you can save any case as closed.</errorMessage>
</ValidationRule>