force-app/main/default/objects/Case/validationRules/State_Assignment_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>State_Assignment_Required</fullName>
    <active>true</active>
    <description>State Assignment requires a value if the Market Assignment is blank for Contractor and Client Inquiry record types</description>
    <errorConditionFormula>ISPICKVAL( State_Assignment__c, &apos;&apos; ) &amp;&amp;  
ISBLANK( Auto_Market_Assignment__c ) &amp;&amp; 
ISBLANK( Account.Name ) &amp;&amp;
CreatedDate &lt;&gt; NOW() &amp;&amp;
CreatedBy.Username &lt;&gt; &quot;Boomi&quot; &amp;&amp;
RecordType.DeveloperName = &quot;Client Inquiry&quot; || RecordType.DeveloperName = &quot;Contractor Inquiry&quot;</errorConditionFormula>
    <errorMessage>The following fields are required: &quot;State Assignment&quot; and &quot;Account&quot;</errorMessage>
</ValidationRule>