force-app/main/default/objects/Case/listViews/Account_Management_Case.listView-meta.xml
<ListView>
    <fullName>Account_Management_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Account Management</label>
    <queue>Account_Management</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>