force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CASES.REASON</columns>
    <columns>Job_ID__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>Auto_Market_Assignment__c</columns>
    <columns>Market_Assignment__c</columns>
    <columns>Market_State_Assignment__c</columns>
    <columns>Manual_Market_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Case.Bid_Process_Details</value>
    </filters>
    <label>All Open Cases</label>
    <sharedTo>
        <role>SF_Admin</role>
    </sharedTo>
</ListView>