force-app/main/default/objects/Case/listViews/ANET_Failed_Payments.listView-meta.xml
<ListView>
    <fullName>ANET_Failed_Payments</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>ANET Failed Payment</value>
    </filters>
    <label>ANET Failed Payments</label>
</ListView>