force-app/main/default/objects/Case/listViews/Bid_Process_Cases_Owned_by_Market_Suppor.listView-meta.xml
<ListView>
    <fullName>Bid_Process_Cases_Owned_by_Market_Suppor</fullName>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Case_Owner_Role__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Bid_Process_Details</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Bid Process Cases Owned by Market Suppor</label>
    <sharedTo>
        <group>Org_Leadership</group>
    </sharedTo>
</ListView>