force-app/main/default/objects/Case/listViews/Bid_Team_Case.listView-meta.xml
<ListView>
    <fullName>Bid_Team_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>OWNER_NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Bid Team</label>
    <queue>Bid_Team</queue>
    <sharedTo>
        <group>Bid_Team</group>
        <group>Org_Leadership</group>
    </sharedTo>
</ListView>