force-app/main/default/objects/Case/listViews/Blue_Ridge_Region.listView-meta.xml
<ListView>
    <fullName>Blue_Ridge_Region</fullName>
    <columns>Market_Region__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Case_Age_in_Days__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Market_Region__c</field>
        <operation>equals</operation>
        <value>Blue Ridge</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Blue Ridge Region</label>
    <sharedTo>
        <group>Back_Office_Managers</group>
        <group>Org_Leadership</group>
    </sharedTo>
</ListView>