force-app/main/default/objects/Case/listViews/BPI_Daily_Files.listView-meta.xml
<ListView>
    <fullName>BPI_Daily_Files</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>BPI_Request_Status__c</field>
        <operation>equals</operation>
        <value>New Request</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>BPI Daily Files</label>
    <queue>BPI_Team</queue>
    <sharedTo>
        <role>BPI_Team</role>
    </sharedTo>
</ListView>