force-app/main/default/objects/Case/listViews/BPI_Requests.listView-meta.xml
<ListView>
    <fullName>BPI_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>BPI_What_Client_is_this_for__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>BPI_Request_Status__c</field>
        <operation>equals</operation>
        <value>Preparing File,Batch File Ready,Processing Batch</value>
    </filters>
    <label>BPI Requests</label>
    <queue>BPI_Team</queue>
    <sharedTo>
        <role>BPI_Team</role>
    </sharedTo>
</ListView>