force-app/main/default/objects/Case/listViews/BPI_Team_Case.listView-meta.xml
<ListView>
    <fullName>BPI_Team_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>BPI_Request_Status__c</field>
        <operation>equals</operation>
        <value>New Request,Preparing File,Batch File Ready,Processing Batch</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.BPI_Requests,Case.Client_Pricing_Request</value>
    </filters>
    <label>BPI Team</label>
    <sharedTo>
        <role>BPI_Team</role>
        <roleAndSubordinates>Director_of_Operations</roleAndSubordinates>
    </sharedTo>
</ListView>