force-app/main/default/objects/Case/listViews/CCS_Team_Case.listView-meta.xml
<ListView>
    <fullName>CCS_Team_Case</fullName>
    <booleanFilter>((1 AND 3) or 4) AND 2</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>Market Support</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Owned_by_Queue__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Original_Queue__c</field>
        <operation>equals</operation>
        <value>Market Support</value>
    </filters>
    <label>Market Support Team</label>
    <sharedTo>
        <group>Market_Support_Management</group>
        <role>CCS_Advocate</role>
        <role>CCS_Manager</role>
        <role>CCS_Team_Lead</role>
        <role>TEI_Market_Support_Lead</role>
        <role>TEI_Site_Manager</role>
    </sharedTo>
</ListView>