force-app/main/default/objects/Case/listViews/Consumer_Leads.listView-meta.xml
<ListView>
    <fullName>Consumer_Leads</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Created_Date_and_Time__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Case_Resolution_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Consumer_Inquiry</value>
    </filters>
    <filters>
        <field>CASES.REASON</field>
        <operation>equals</operation>
        <value>How TaskEasy Works/Join TaskEasy</value>
    </filters>
    <label>Consumer Leads</label>
</ListView>