force-app/main/default/objects/Case/listViews/Consumer_Rejections_Case.listView-meta.xml
<ListView>
    <fullName>Consumer_Rejections_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Consumer Rejections</label>
    <queue>Consumer_Rejections</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>